src/test/ui/generator/no-arguments-on-generators.stderr
error[E0628]: generators cannot have explicit arguments
  --> $DIR/no-arguments-on-generators.rs:4:15
   |
LL |     let gen = |start| {
   |               ^^^^^^^

error: aborting due to previous error

